# notion-mcp

./: .gitignore  main.py  notion_api_client.py  pyproject.toml
core/: config.py
models/: notion_models.py
routers/: notion.py
