[project]
name = "notion-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "RocketMan35",email = "harhyom9189@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
